update margin-top on index #content to fix issues with overflow-gutterfix
index page content sits inside body with 8px margin, but doesnt respond
to that 8px margin on project pages..

--- a/public/docs/css/screen.css
+++ b/public/docs/css/screen.css
@@ -232,6 +232,7 @@ ul.projects li {
 
 .masonry-gutterfix{
     margin-right: -35px !important;
+    margin-top: 122px !important;
 }
 
 .grid-sizer {width: 1px;}
